SERVER-55007 Deadlock between step down and MongoDOperationContextSession